# library-assistant-langgraph

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  watch.py
.github/: DEVELOPMENT_PLAN.md
chats/: __init__.py
chats/api/: routes.py
chats/models/: chat.py
chats/routes/: routes.py
chats/services/: chat_service.py
projects/: __init__.py
projects/api/: routes.py
projects/models/: project.py
projects/routes/: routes.py
projects/services/: project_service.py
shared/: __init__.py  config_service.py  database_service.py
static/: chatui.js
static/js/: chatui.js  layout.js  projects.js
templates/: _footer.html  _header.html  _project_files.html  _sidebar.html  _sidebar_left.html  _sidebar_right.html  base.html  chats_list.html  index.html  projects_list.html
templates/chats/: chats_list.html
templates/layout/: _footer.html  _header.html  _sidebar_left.html  base.html
templates/projects/: create.html  edit.html  list.html
