[project]
name = "library-assistant-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "quart>=0.19.4",
    "motor>=3.6.0",
    "pymongo>=4.10.0"
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
